--- a/index.html
+++ b/index.html
@@ -419,14 +419,14 @@
 
                         <!--==================== PROJECT 2 ====================-->
                         <div class="project__content grid swiper-slide">
-                            <img src="project2.jpg" alt="" class="project__img">
+                            <img src="project2.JPG" alt="" class="project__img">
 
                             <div class="project__data">
                                 <h3 class="project__title">Personal Portfolio</h3>
                                 <p class="project__description">- A portfolio Website created using HTML,CSS,JAVASCRIPT which has some advanced features like Dark and
                                     Light Themes available for a better experience, Scroll buttons
                                 </p>
-                                <a href="" class="button button--flex button--small project__button">
+                                <a href="https://pratikgirade.github.io/Personal-Portfolio1/" class="button button--flex button--small project__button">
                                     Code
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
@@ -465,7 +465,7 @@
                             </a>
                         </div>
 
-                        <img src="Capture.png" alt="" class="project__hire__img">
+                        <img src="Capture.PNG" alt="" class="project__hire__img">
                     </div>
                 </div>
 
